--- a/about.html
+++ b/about.html
@@ -81,11 +81,11 @@
             <h2>Contact</h2>
             <p>For questions, suggestions, or feedback, please reach out through our GitHub repository or contact us directly.</p>
             <div class="contact-links">
-                <a href="https://github.com/yourusername/udp-broadcast-simulator" class="contact-button">
+                <a href="https://github.com/rendykml" class="contact-button">
                     <img src="/assets/icons/github.svg" alt="GitHub">
                     View on GitHub
                 </a>
-                <a href="mailto:contact@example.com" class="contact-button">
+                <a href="https://www.instagram.com/rendy_kamaluddin/" class="contact-button">
                     <img src="src/assets/icons/email.svg" alt="Email">
                     Contact Us
                 </a>
