--- a/documentation.html
+++ b/documentation.html
@@ -41,12 +41,9 @@
         <div class="doc-content">
           <div class="doc-image">
             <img
-              src="src/assets/docs/udp-diagram.png"
+              src="src/assets/udp.png"
               alt="UDP Broadcast Diagram"
             />
-            <p class="image-caption">
-              Figure 1: UDP Broadcast Communication Flow
-            </p>
           </div>
           <p>
             UDP (User Datagram Protocol) broadcasting is a method of network
@@ -61,10 +58,10 @@
         <div class="doc-content">
           <div class="doc-image">
             <img
-              src="src//assets/docs/simulator-guide.png"
+              src="src/assets/guide.png"
               alt="Simulator Guide"
             />
-            <p class="image-caption">Figure 2: Simulator Interface Guide</p>
+            
           </div>
           <ol class="steps">
             <li>Select a source device from the dropdown menu</li>
@@ -80,10 +77,10 @@
         <div class="doc-content">
           <div class="doc-image">
             <img
-              src="src/assets/docs/network-topology.png"
+              src="src/assets/image.png"
               alt="Network Topology"
             />
-            <p class="image-caption">Figure 3: Network Topology Diagram</p>
+           
           </div>
           <p>
             The simulator demonstrates a simple network with three devices
